feature/add-mapstruct-and-lombok-dependencies-with-mappers